# giant-events

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  settings.py
events/: admin.py  models.py  views.py
events/migrations/: 0001_initial.py  0004_auto_20220509_0752.py
events/tests/: test_models.py  test_search_indexes.py  test_views.py
tests/: test_giant_events.py
