[tool.poetry]
name = "giant-events"
version = "0.1.0"
description = "A small reusable package that adds an Events app to a project"
authors = ["Will-Hoey <will.hoey@giantmade.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/giantmade/giant-events"
repository = "https://github.com/giantmade/giant-events"
keywords = ["events", "app"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

include = [
    "LICENSE",
]
packages = [
    { include = "events" }
]

[tool.poetry.dependencies]
python = "^3.6"
giant-mixins = "^0.1.1"
django-filer = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
django = "2.2"
django-cms = "^3.7.2"
black = "^19.10b0"

[[tool.poetry.source]]
name = "TestPyPi"
url = "https://test.pypi.org/simple/"
secondary = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"